fix alignment issue

--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
               <div class="extra-and-pricing-header">
                 <h3>DOWNSPOUT</h3>
               </div>
-              <div class="size__header">
-                <div class="size__header_section_label">Size</div>
-                <div class="size__header_section">2x3</div>
-                <div class="size__header_section">3x4</div>
+              <div class="size__header2">
+                <div class="size__header_section_label2">Size</div>
+                <div class="size__header_section2">2x3</div>
+                <div class="size__header_section2">3x4</div>
               </div>
             </div>
             <div class="pricing-container">
