--- a/index.html
+++ b/index.html
@@ -77,12 +77,15 @@
             <div class="tools-bar">
               <select id="tool-select">
                 <option value="gutter">Gutter</option>
-                <option value="gutter-w-screen">Gutter w/ Screen</option>
+                <!-- <option value="gutter-w-screen">Gutter w/ Screen</option> -->
                 <option value="existing-gutter">Existing Gutter</option>
                 <option value="downspout">Downspout</option>
                 <option value="drop">Drop to lower</option>
                 <option value="valley-shield">Valley Shield</option>
                 <option value="free-text">Elbow Seq/Piece Length</option>
+                <!-- <option value="eraser">Eraser</option> -->
+                <!-- <option value="flashing">Flashing</option>
+              <option value="fascia-repair">Fascia Repair/Replace</option> -->
               </select>
               <input
                 type="number"
@@ -90,7 +93,10 @@
                 max="50"
                 id="grid-size"
                 value="14"
+                class="toolbar__number-input"
               />
+              <!-- <button id="color">Color</button> -->
+              <button type="button" class="undo-button">Set Grid</button>
               <select id="color">
                 <option
                   value="black"
@@ -129,9 +135,8 @@
                   Yellow
                 </option>
               </select>
-              <button type="button" class="undo-button">
-                Undo
-              </button>
+
+              <button class="eraser-btn" type="button">Eraser</button>
               <button type="button" id="clear-button">Clear</button>
               <button type="button" id="finish-button" onclick="finish()">
                 Done
